# HVAC-Panel-UI-Qt6

./: CMakeLists.txt  HVAC.qmlproject  qmlmodules  qt_attribution.json
content/: App.qml  CMakeLists.txt  HomePage.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/Common/: AutoButton.qml  CMakeLists.txt  ColorizedImage.qml  CustomComboBox.qml  CustomDial.qml  CustomIconButton.qml  CustomRadioButton.qml  CustomRoundButton.qml  CustomSlider.qml  CustomSwitch.qml  CustomTextField.qml  StatisticsChart.qml  TemperatureLabel.qml  ThermostatControl.qml  TimeSelector.qml  qmldir
imports/HVAC/: CMakeLists.txt  Constants.qml  qmldir
imports/HVAC/designer/: plugin.metainfo
src/: app_environment.h  import_qml_plugins.h  main.cpp
